styles/index.css
@import url("./fonts.css");

/* Variables */
:root {
    --header-spacing: calc(100vh - 65px); 
}

/* Global */
* {box-sizing: border-box;}

body, html{
    margin: 0;
    font-family: OpenSans-Light;
}

/* Header (Title and Hamburger Menu) */
header { 
    background: #efefef;
    position: relative;
    padding: 1.2px;
    padding-left: 65px;
    box-shadow: 0px 2px 0px #ccc;
}

header h1 {
    font-size: 1.5em;
    margin: 15px;
    color: #272727;
    
}

header a {
    font-size: 1.5em;
    padding: 16px;
    position: absolute;
    right: 10px;
    top: 0;
    color: #4d4d4d;
}


/* Groups */
aside {
    top: 0;
    height: 100vh;
    position: absolute;
    background-color: #333333;
}

.logo-container{
    width: 65px;
    height: 65px;
}

.logo-container--inner {
    background: #db0a5b;
    display: inline-flex;
    height: 100%;
    width: 100%;
}

.logo-container--inner img {
    width: 70%;
    height: 70%;
    margin: auto;

}

.groups {
    padding: 0;
    list-style-type: none;
}

.group {
    width: 100%;
    height: 60px;
    margin: 15px 0px;
    text-align: center;
}

.group--image {
    background-image: url("../img/group-default.png");
    width: 70%;
    height: 70%;
    border-radius: 5px;
}

.group--index {
    color: #fff;
    margin: 0;
}

/********** Posts area and content area **********/
.posts-and-content{
    display: flex;
    margin-left: 65px;
    height: var(--header-spacing);
}

/* Posts */
.posts {
    width: 30vw;
    background: #f1f1f2;    
}

/* Post Content */
.post-content {
    display: flex;
    width: 70vw;
    flex-direction: column;
}

.post-content--text {
    width: 100%;
    height: 90%;
}

.post-content--container-input {
    height: 10%;
    text-align: center;
    box-shadow: 0px -1px 0px #eee;
}

.post-content--container-input input{
    padding: 10px;
    width: 95%;
    position: relative;
    top: 50%;
    transform: perspective(1px) translateY(-50%);
    border: #eee 1px solid;
    border-radius: 3px;
}

.post-content--container-input input::placeholder {
    color: #ccc;
}

